# weg_rag_project

./: .env  .gitignore  Dockerfile  README.md  app_frontend.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  routes.py
app/config/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/providers/: __init__.py  document_loader.py  llm.py  vector_store.py
app/services/: __init__.py  chat.py  ingestion.py
app/utils/: __init__.py  logger.py
