[project]
name = "rag-project"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.1",
    "langchain-ollama>=1.0.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools]
package-dir = { "" = "app" }
